--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/#">
               <div class="nav-icon"><i class="fas fa-car-side"></i></div>
-              <span>Alquilar</span>
+              <span>Inicio</span>
             </a>
           </li>
           <li class="nav-item">
