--- a/src/app/shared/components/catalogo-component/catalogo-component.component.css
+++ b/src/app/shared/components/catalogo-component/catalogo-component.component.css
@@ -18,8 +18,8 @@
 }
 
 .filtro {
-  background: linear-gradient(145deg, #f0f0f0, #dcdcdc);
-  color: #333;
+
+  color: #000000;
   width: 190px;
   padding: 12px 18px;
   border: none;
@@ -27,6 +27,7 @@
   cursor: pointer;
   font-weight: 500;
   font-size: 1rem;
+
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
   display: flex;
@@ -44,15 +45,16 @@
 }
 
 .filtro.activo {
-  background-color: #6f42c1;
-  color: white;
+  background: linear-gradient(135deg, #6f42c1 0%, #8e63d4 100%) !important;
+  color: white !important;
   font-weight: bold;
   box-shadow: inset 0 0 0 2px white;
 }
 
 .filtro.activo i {
-  color: white;
+  color: white !important;
 }
+
 
 .filtro.limpiar {
   background-color: #f8d7da;
