--- a/src/app/shared/components/titulo/titulo.component.html
+++ b/src/app/shared/components/titulo/titulo.component.html
@@ -1,6 +1,8 @@
 <div class="container my-5 py-5 titulo-seccion">
     <h1><b>Contactos</b><br/></h1>
-    <a href="index.html"><b>Inicio</b></a>
-    <span>/</span>
-    <span class="actual">Contáctanos</span>
+    <div class="breadcrumb">
+      <a routerLink="/"><b>INICIO</b></a>
+      <span>/</span>
+      <span class="actual">CONTÁCTANOS</span>
+    </div>
 </div>
