--- a/src/app/shared/components/home-banner-first/home-banner-first.component.html
+++ b/src/app/shared/components/home-banner-first/home-banner-first.component.html
@@ -9,16 +9,22 @@
       <h2 class="titulo-formulario-banner">Buscar Vehiculos</h2>
 
       <div class="folmulario-banner-interior">
-         <select class="form-select" aria-label="Tipo de vehiculos" formControlName="selectedOptionV" >
-         <option *ngFor="let tipo of tiposVheiculo" [value]="tipo">{{ tipo }}</option>
-        </select>
+         <mat-form-field appearance="outline">
+          <mat-label>TIPO DE VEHICULO</mat-label>
+          <mat-select formControlName="selectedOptionV">
+            <mat-option *ngFor="let tipo of tiposVehiculo" [value]="tipo">{{ tipo }}</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-        <select class="form-select" aria-label="ubicacion" formControlName="selectedOptionU" >
-         <option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion">{{ ubicacion }}</option>
-       </select>
+        <mat-form-field appearance="outline">
+          <mat-label>UBICACION</mat-label>
+          <mat-select formControlName="selectedOptionU">
+            <mat-option *ngFor="let ubicacion of ubicaciones" [value]="ubicacion">{{ ubicacion }}</mat-option>
+          </mat-select>
+        </mat-form-field>
 
+        <button mat-raised-button class="boton-resultado" type="submit">VER RESULTADO</button>
       </div>
-      <button class="boton-resultado"  type="submit">VER RESULTADO</button>
     </form>
   </div>
 </div>
