--- a/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
+++ b/src/app/shared/components/formulario-alquilar/formulario-alquilar.component.html
@@ -20,7 +20,7 @@
         <span class="price-dia">/ día</span>
       </div>
     </div>
-    <!-- Formulario de alquiler -->
+    <!-- Formulario de reserva -->
     <div class="modal-login">
       <button class="close-btn" type="button" (click)="cerrar()">×</button>
       <form [formGroup]="alquilerForm">
@@ -90,7 +90,7 @@
           El método de pago es obligatorio
         </div>
 
-        <button type="button" class="login-btn" disabled>Confirmar Alquiler (Solo vista)</button>
+        <button type="button" class="login-btn" (click)="confirmarReserva()">Confirmar Alquiler</button>
       </form>
     </div>
   </div>
