--- a/src/app/shared/components/contacto-banner/contacto-banner.component.css
+++ b/src/app/shared/components/contacto-banner/contacto-banner.component.css
@@ -1,5 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap');
 
+
+/* Estilos para el encabezado */
+.titulo-seccion {
+  position: relative;
+  background-color: #5937E0;
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px;
+  color: var(--color-texto-claro);
+  padding: 6rem 0;
+  text-align: center;
+  overflow: hidden;
+}
+
+.titulo-seccion {
+  position: relative;
+  z-index: 2;
+}
+
+.titulo-seccion h1 {
+  font-size: 4rem;
+  font-weight: 800;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  animation: fadeInDown 0.8s ease-out;
+}
+
+.breadcrumb {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  margin-top: 1rem;
+  animation: fadeIn 0.8s ease-out;
+}
+
+.breadcrumb a {
+  color: orange;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  padding: 0.5rem;
+}
+
+.breadcrumb a:hover {
+  color: #f5d15a;
+}
+
+.breadcrumb .actual {
+  color: var(--naranja-oscuro);
+  font-weight: 600;
+  padding: 0.5rem;
+  animation: pulse 2s infinite;
+}
+
+.breadcrumb span {
+  margin: 0 10px;
+}
+
+/* Animaciones */
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+    color: var(--naranja-claro);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 .container{
   text-align: center;
 
@@ -27,7 +122,7 @@ a {
 }
 
 .input-group {
-  flex: 1 1 45%; 
+  flex: 1 1 45%;
   display: flex;
   flex-direction: column;
 }
@@ -47,7 +142,7 @@ a {
 .error-msg {
   color: red;
   font-size: 0.8rem;
-  visibility: hidden; 
+  visibility: hidden;
   position: absolute;
   bottom: -1.2rem;
 }
@@ -64,5 +159,5 @@ button {
   cursor: pointer;
   font-size: 16px;
   min-width: 200px;
-      
+
 }
