--- a/src/app/shared/components/contacto-banner/contacto-banner.component.html
+++ b/src/app/shared/components/contacto-banner/contacto-banner.component.html
@@ -1,8 +1,10 @@
 <div class="container my-5 py-5 titulo-seccion">
     <h1><b>Contacto</b><br/></h1>
-    <a href="index.html"><b>Inicio</b></a>
-    <span>/</span>
-    <span class="actual">Contáctanos</span>
+    <div class="breadcrumb">
+      <a routerLink="/"><b>Inicio</b></a>
+      <span>/</span>
+      <span class="actual">Contáctanos</span>
+    </div>
 </div>
 
   <div class="container hero">
@@ -48,5 +50,5 @@
     </form>
 
   </div>
-  
+
 
